--- a/BotsController.csproj
+++ b/BotsController.csproj
@@ -6,6 +6,15 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove=".env" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Include=".env" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="DotNetEnv" Version="3.1.1" />
       <PackageReference Include="DSharpPlus" Version="4.4.0-nightly-01464" />
     </ItemGroup>
 
