--- a/BotsController.csproj
+++ b/BotsController.csproj
@@ -6,16 +6,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <None Remove=".env" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Compile Include=".env" />
-    </ItemGroup>
-
-    <ItemGroup>
       <PackageReference Include="DotNetEnv" Version="3.1.1" />
       <PackageReference Include="DSharpPlus" Version="4.4.0-nightly-01464" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update=".env">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
